# unnamedracinggame

./: .gitignore  Cargo.toml
res/: lang_en-US.ftl
src/: lang.rs  main.rs
